Fix: Use the correct CSS stylesheet

--- a/addons/fitlytics/finnito/fitlytics-theme/resources/views/layouts/default.twig
+++ b/addons/fitlytics/finnito/fitlytics-theme/resources/views/layouts/default.twig
@@ -151,7 +151,7 @@
 
     </div>
 </footer>
-{{ asset_style("finnito.theme.fitlytics::css/style.css", ["version", "live"]) }}
+{{ asset_style("public::css/style.css", ["version", "live"]) }}
 
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/2.0.5/pure-min.css" integrity="sha512-zGyYxJ4OrTxpKh6piIz2WcdSrGTDUEe3lDNhuFf0hPQzU3evbD4LKDD5GKjdlbSiFQ/vrkSFpHMc6RLgaKNWrA==" crossorigin="anonymous" />
