Improve note/plan form display

--- a/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/home.twig
+++ b/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/home.twig
@@ -59,13 +59,9 @@
 
 
 
-    <div class="pure-g">
-        <div class="pure-u-2 pure-u-md-1-2">
-            {{ form("note_form") }}
-        </div>
-        <div class="pure-u-2 pure-u-md-1-2">
-            {{ form("plan_form") }}
-        </div>
+    <div class="forms">
+        {{ form("note_form") }}
+        {{ form("plan_form") }}
     </div>
 
     <div id="calendar"></div>
