--- a/addons/fitlytics/finnito/fitlytics-theme/resources/views/layouts/default.twig
+++ b/addons/fitlytics/finnito/fitlytics-theme/resources/views/layouts/default.twig
@@ -90,11 +90,7 @@
 
             <!-- Success Messages -->
             {% if message_exists('success') %}
-                <div class="alert alert-success alert-dismissible">
-                    <button type="button" class="close" data-dismiss="alert">
-                        <span>&times;</span><span class="sr-only">Close</span>
-                    </button>
-
+                <div class="alert alert-success">
                     {% for message in message_pull('success') %}
                         {{ trans(message)|markdown }}
                     {% endfor %}
@@ -103,11 +99,7 @@
 
             <!-- Informational Messages -->
             {% if message_exists('info') %}
-                <div class="alert alert-info alert-dismissible">
-                    <button type="button" class="close" data-dismiss="alert">
-                        <span>&times;</span><span class="sr-only">Close</span>
-                    </button>
-
+                <div class="alert alert-info">
                     {% for message in message_pull('info') %}
                         {{ trans(message)|markdown }}
                     {% endfor %}
@@ -117,11 +109,7 @@
 
             <!-- Warning Messages -->
             {% if message_exists('warning') %}
-                <div class="alert alert-warning alert-dismissible">
-                    <button type="button" class="close" data-dismiss="alert">
-                        <span>&times;</span><span class="sr-only">Close</span>
-                    </button>
-
+                <div class="alert alert-warning">
                     {% for message in message_pull('warning') %}
                         {{ trans(message)|markdown }}
                     {% endfor %}
@@ -131,11 +119,7 @@
 
             <!-- Error Messages -->
             {% if message_exists('error') %}
-                <div class="alert alert-danger alert-dismissible">
-                    <button type="button" class="close" data-dismiss="alert">
-                        <span>&times;</span><span class="sr-only">Close</span>
-                    </button>
-
+                <div class="alert alert-danger">
                     {% for message in message_pull('error') %}
                         {{ trans(message)|markdown }}
                     {% endfor %}
