Feat: Adds page-ability to view past weeks of data

--- a/addons/fitlytics/finnito/fitlytics-theme/resources/css/style.css
+++ b/addons/fitlytics/finnito/fitlytics-theme/resources/css/style.css
@@ -21,6 +21,10 @@ h3 {
     margin-bottom: 0;
 }
 
+.navigation-controls {
+    margin-bottom: 1.5rem;
+}
+
 .alert {
     display: block;
     max-width: 100%;
