--- a/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/home.twig
+++ b/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/home.twig
@@ -1,7 +1,23 @@
 {% extends "finnito.theme.fitlytics::layouts.default" %}
 
 {% block content %}
-    <h2>{{ week[0].date|date("D jS \\o\\f F") }} - {{ week[6].date|date("D jS \\o\\f F") }}</h2>
+    <h2>{{ week_of|date_modify('monday this week')|date("D jS \\o\\f F") }} - {{ week_of|date_modify('sunday this week')|date("D jS \\o\\f F Y") }}</h2>
+
+    <div class="navigation-controls">
+        <a class="pure-button button-secondary" href="/?week-of={{ week_of|date_modify('-1 week')|date('Y-m-d', 'Pacific/Auckland') }}">Previous Week</a>
+        <a class="pure-button button-secondary" href="/?week-of={{ 'now'|date('Y-m-d', 'Pacific/Auckland') }}">Today</a>
+        <a class="pure-button button-secondary" href="/?week-of={{ week_of|date_modify('+1 week')|date('Y-m-d', 'Pacific/Auckland') }}">Next Week</a>
+        <select name="week-selector" id="week-selector">
+        {% for item in weeks %}
+            <option value="{{ item|date("Y-m-d", "Pacific/Auckland") }}" {% if week_of|date_modify('monday this week')|date("Y-m-d") == item|date("Y-m-d", "Pacific/Auckland") %} selected {% endif %}> {{ item|date("Y-m-d", "Pacific/Auckland") }}</option>
+        {% endfor %}
+        </select>
+        <script>
+        document.querySelector("select#week-selector").addEventListener("change", function(event) {
+            window.location.href = ("/?week-of=" + event.target.selectedOptions[0].value);
+        });
+        </script>
+    </div>
 
     <div class="pure-g">
         <div class="pure-u-1-1 pure-u-md-1-2">
@@ -252,6 +268,7 @@
             initialView: 'dayGridMonth',
             eventDisplay: "block",
             height: "75vh",
+            initialDate: "{{ week_of|date('Y-m-d') }}",
             stickyHeaderDates: true,
             firstDay: 1,
             stickyFooterScrollbar: true,
