--- a/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/home.twig
+++ b/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/home.twig
@@ -48,8 +48,38 @@
                 </tbody>
             </table>
         </div>
-        <div class="pure-u-1-1 pure-u-md-1-2"><canvas id="currentWeekChart"></canvas></div>
-
+        <div class="pure-u-1-1 pure-u-md-1-2">
+            <canvas id="currentWeekChart"></canvas>
+            <script>
+            document.addEventListener("DOMContentLoaded", function() {
+                var currentWeekChartEl = document.getElementById('currentWeekChart').getContext('2d');
+                var currentWeekChart = new Chart(currentWeekChartEl, { 
+                    type: 'bar',
+                    options: {
+                        interaction: {
+                            mode: 'null'
+                        },
+                        plugins: {
+                            legend: {
+                                position: 'bottom',
+                            },
+                            title: {
+                                display: true,
+                                text: 'Week Breakdown'
+                            }
+                        },
+                        responsive: true,
+                        scales: {
+                          y: {
+                            beginAtZero: true
+                          }
+                        }
+                    }
+                });
+                getRemoteData(currentWeekChart, '/api/currentWeekChart?week-of={{ week_of|date("Y-m-d", "Pacific/Auckland") }}');
+            });
+            </script>
+        </div>
     </div>
 
     <div class="training-log">
